Fix spacing, update mobile styles

--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -1,23 +1,24 @@
 .hero {
-  padding: $padding-md $padding-md $padding-lg;
+  margin: 50px $padding-md 175px $padding-md;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: #555;
 
   @include mobile() {
-    padding: 25px;
+    margin: 25px 25px $padding-md 25px;
     background: none;
     background-size: cover;
-    margin-bottom: $padding-sm;
   }
 
   &__text {
-    flex-basis: 50%;
+    width: 50%;
     color: inherit;
 
     @include mobile() {
-      flex-basis: 100%;
+      max-width: 550px;
+      width: 100%;
+      margin: 0 auto;
       text-align: center;
     }
   }
@@ -27,6 +28,7 @@
     top: 0;
     right: 0;
     width: 50%;
+    z-index: -1;
 
     @include mobile() {
       display: none;
@@ -39,7 +41,7 @@
   }
 
   &__heading {
-    font-size: 2.6rem;
+    font-size: 2.8rem;
     font-weight: bold;
 
     @include mobile {
